src/test/resources/tests/58_dynamic_key_digit_error.expected
Runtime error: Runtime Error at line 8:4: Dynamic thread key must not start with a digit: '1bad'
