src/test/resources/tests/58_dynamic_key_digit_error.pt
// Test: Dynamic thread key starting with digit is a runtime error
function dummy() do
    return 1
end

key = "1bad"
multi result do
    thread dummy() -> $key
end
